--- a/index.html
+++ b/index.html
@@ -14,6 +14,9 @@
    Twine / Harlowe 3.3.9
    "Ghost Sidebar Exorcism" Full Set
    ========================================= */
+:root{
+  --debug: 0; /* 1=表示 / 0=非表示 */
+}
 
 /* Font */
 @import url("https://fonts.googleapis.com/css2?family=Kiwi+Maru&display=swap");
@@ -187,8 +190,7 @@ tw-link, tw-link.visited {
 tw-link:hover { opacity: 0.86; }
 tw-link:focus { outline: none; }
 
-/* ----- 5) Debug (必要なときだけ) ----- */
-/* 画面ど真ん中線：ONのままでOK。邪魔なら丸ごとコメントアウト。 */
+/* debug (toggle) */
 html::before{
   content:"";
   position: fixed;
@@ -199,10 +201,16 @@ html::before{
   background: rgba(255,0,0,0.65);
   z-index: 999999;
   pointer-events: none;
+  opacity: var(--debug);
 }
 
-/* Passage枠：ONのままでOK。邪魔ならコメントアウト。 */
-tw-passage{ outline: 2px solid rgba(0,255,0,0.55) !important; }
+tw-passage{
+  outline: 2px solid rgba(0,255,0,0.55);
+  outline-offset: 0;
+  /* debug OFFのときだけ透明にする */
+  /* outlineはopacityで消せないので、色で切り替える */
+  outline-color: rgba(0,255,0, calc(0.55 * var(--debug)));
+}
 
 /* =========================================
    FIX: Keep tw-passage centered
@@ -250,15 +258,76 @@ tw-passage tw-expression{
 /* Startを絶対に中央寄せ（最終勝利ルール） */
 /* Startの中は全部中央寄せにする（子孫含む） */
 tw-passage[tags~="start"] { text-align: center !important; }
-tw-passage[tags~="start"] * { text-align: center !important; }</style><script role="script" id="twine-user-script" type="text/twine-javascript"></script><tw-tag name="start" color="blue"></tw-tag><tw-passagedata pid="1" name="Start" tags="start" position="250,450" size="100,100">
+tw-passage[tags~="start"] * { text-align: center !important; }
 
-&lt;span class=&quot;title&quot;&gt;真夜中の&lt;br&gt;カウンター&lt;/span&gt;
+/* Startだけ、押しやすい選択肢（安全版） */
+tw-passage[tags~="start"] tw-link:hover{
+  background: rgba(255,255,255,0.08);
+  border-color: rgba(255,255,255,0.45);
+}
+tw-passage[tags~="start"] tw-link:active{
+  transform: translateY(1px) scale(0.99);
+}
+tw-passage[tags~="start"] tw-link,
+tw-passage[tags~="start"] tw-link.visited{
+  display: block;
+  width: min(34rem, 88vw);   /* ←ここが安定ポイント */
+  margin: 0.75em auto;        /* ちゃんと中央 */
+  padding: 0.6em 1.0em;
+  border-radius: 999px;
+  text-decoration: none;
+  border: 1px solid rgba(255,255,255,0.28);
+  background: rgba(0,0,0,0.18);
+  box-sizing: border-box;
+  text-align: center;        /* 中身も中央 */
+  font-weight: 600;
+  letter-spacing: 0.02em;
+}
 
+tw-passage[tags~="start"] tw-link:hover{
+  background: rgba(255,255,255,0.08);
+  border-color: rgba(255,255,255,0.45);
+}
+
+/* ===== Start: ボタンを「外枠ごと」確実に中央に固定 ===== */
+tw-passage[tags~="start"]{
+  /* 親側のズレ要因を潰す */
+  padding-left: 0 !important;
+  padding-right: 0 !important;
+  margin-left: auto !important;
+  margin-right: auto !important;
+
+  /* “中の要素”の中央寄せも担保 */
+  text-align: center;
+}
+
+/* ボタン本体（tw-link）を中央に固定 */
+tw-passage[tags~="start"] tw-link,
+tw-passage[tags~="start"] tw-link.visited{
+  display: block;
+
+  /* ここがメイン：幅を決めて margin:auto で中央 */
+  width: min(34rem, 88vw);
+  margin-left: auto !important;
+  margin-right: auto !important;
+
+  /* 念のため：レイアウト計算のズレを減らす */
+  box-sizing: border-box;
+
+  /* 中の文字も中央 */
+  text-align: center;
+
+  /* もし以前の transform が残ってたら無効化 */
+  transform: none;
+}
+/* ===== /Start ===== */</style><script role="script" id="twine-user-script" type="text/twine-javascript"></script><tw-tag name="start" color="blue"></tw-tag><tw-tag name="C_01" color="blue"></tw-tag><tw-passagedata pid="1" name="Start" tags="start" position="250,450" size="100,100">&lt;span class=&quot;title&quot;&gt;５分で異世界&lt;/span&gt;
 &lt;span class=&quot;lead&quot;&gt;※下にスクロールして&lt;br&gt;物語を進めます&lt;/span&gt;
+[[第一話　量子もつれの夜-&gt;Q_01]]
+[[第二話　反響する波音-&gt;M_01]]
+[[第三話　真夜中のカウンター-&gt;W_01]]
 
-[[はじめる-&gt;Bar_01]]
 
-</tw-passagedata><tw-passagedata pid="2" name="R0Intro" tags="" position="375,450" size="100,100">(put: $visited + 1 into $visited)
+</tw-passagedata><tw-passagedata pid="2" name="R0Intro" tags="" position="425,1275" size="100,100">(put: $visited + 1 into $visited)
 
 眠れない夜。  
 部屋は静かなのに、胸の奥だけがうるさい。
@@ -271,7 +340,7 @@ tw-passage[tags~="start"] * { text-align: center !important; }</style><script ro
 （link: &quot;ゆっくり&quot;)[(set: $heat to &quot;ゆっくり&quot;)(goto: &quot;R1Hall&quot;)]
 （link: &quot;そのまま&quot;)[(set: $heat to &quot;そのまま&quot;)(goto: &quot;R1Hall&quot;)]
 （link: &quot;もう少し&quot;)[(set: $heat to &quot;もう少し&quot;)(goto: &quot;R1Hall&quot;)]
-</tw-passagedata><tw-passagedata pid="3" name="R1Hall" tags="" position="500,450" size="100,100">(put: $visited + 1 into $visited)
+</tw-passagedata><tw-passagedata pid="3" name="R1Hall" tags="" position="575,1250" size="100,100">(put: $visited + 1 into $visited)
 
 あなたは、異世界の回廊に立っている。  
 遠くから音楽と笑い声。扉の向こうは祝祭の光。
@@ -291,7 +360,7 @@ tw-passage[tags~="start"] * { text-align: center !important; }</style><script ro
 その声は、知らないはずなのに、なぜか落ち着く。
 
 [[扉をくぐる-&gt;R1Sasarui]]
-</tw-passagedata><tw-passagedata pid="4" name="R1Sasarui" tags="" position="625,450" size="100,100">(put: $visited + 1 into $visited)
+</tw-passagedata><tw-passagedata pid="4" name="R1Sasarui" tags="" position="750,1250" size="100,100">(put: $visited + 1 into $visited)
 
 ホールは眩しい。人が多い。  
 でも、嫌な視線じゃない。  
@@ -318,7 +387,7 @@ tw-passage[tags~="start"] * { text-align: center !important; }</style><script ro
 「ねえ。今夜は…“声”が欲しい？ それとも、“間”？」
 
 [[……声が欲しい-&gt;PeakUI]]
-</tw-passagedata><tw-passagedata pid="5" name="PeakUI" tags="" position="750,450" size="100,100">(put: $visited + 1 into $visited)
+</tw-passagedata><tw-passagedata pid="5" name="PeakUI" tags="" position="925,1250" size="100,100">(put: $visited + 1 into $visited)
 
 (align: &quot;==&gt;&lt;=&quot;)[
 （ここは、言葉が少なくなる）
@@ -371,7 +440,7 @@ tw-passage[tags~="start"] * { text-align: center !important; }</style><script ro
 
 [[タイトルへ戻る-&gt;Start]]
 ]
-</tw-passagedata><tw-passagedata pid="7" name="Bar_01" tags="" position="250,575" size="100,100">トイレのドアを開けると、バーの照明が目に沁みた。
+</tw-passagedata><tw-passagedata pid="7" name="W_01" tags="" position="500,650" size="100,100">トイレのドアを開けると、バーの照明が目に沁みた。
 
 カウンターに一人、男が座っている。紺のジャケット、白いシャツ。ネクタイは緩められて、グラスを傾ける手つきに疲労が滲む。彼が振り返る。
 
@@ -430,20 +499,20 @@ tw-passage[tags~="start"] * { text-align: center !important; }</style><script ro
 私は—この身体の持ち主は—何と言えばいいんだろう。
 
 [[返す言葉を選ぶ-&gt;Choice_01]]
-</tw-passagedata><tw-passagedata pid="8" name="Choice_01" tags="" position="250,700" size="100,100">どんな言葉で返す？
+</tw-passagedata><tw-passagedata pid="8" name="Choice_01" tags="" position="625,650" size="100,100">どんな言葉で返す？
 
 (link-goto: &quot;A: 「でも、あなたは生きてる。お父さんとは違う人生を選んでいい」&quot;, &quot;A_01&quot;)[]
 
 (link-goto: &quot;B: 「お父さんなら、あなたを責めないと思う」&quot;, &quot;B_01&quot;)[]
 
-(link-goto: &quot;C: 「その判断、間違ってたと思う？」&quot;, &quot;C_01&quot;)[]
-</tw-passagedata><tw-passagedata pid="9" name="A_01" tags="" position="125,825" size="100,100">（text-style: &quot;italic&quot;）※Aルートは後で実装予定。いったんCを作って全体のボリューム確認中。
+
+(link-goto: &quot;C: 「その判断、間違ってたと思う？」&quot;, &quot;C_01&quot;)[]</tw-passagedata><tw-passagedata pid="9" name="A_01" tags="" position="625,950" size="100,100">（text-style: &quot;italic&quot;）※Aルートは後で実装予定。いったんCを作って全体のボリューム確認中。
 
 [[戻る-&gt;Choice_01]]
-</tw-passagedata><tw-passagedata pid="10" name="B_01" tags="" position="250,825" size="100,100">（text-style: &quot;italic&quot;）※Bルートは後で実装予定。いったんCを作って全体のボリューム確認中。
+</tw-passagedata><tw-passagedata pid="10" name="B_01" tags="" position="750,950" size="100,100">（text-style: &quot;italic&quot;）※Bルートは後で実装予定。いったんCを作って全体のボリューム確認中。
 
 [[戻る-&gt;Choice_01]]
-</tw-passagedata><tw-passagedata pid="11" name="C_01" tags="" position="375,825" size="100,100">私は言葉を選ぶ。
+</tw-passagedata><tw-passagedata pid="11" name="C_01" tags="" position="775,650" size="100,100">私は言葉を選ぶ。
 
 「その判断、間違ってたと思う？」
 
@@ -750,7 +819,909 @@ tw-passage[tags~="start"] * { text-align: center !important; }</style><script ro
 そう思った。
 
 [[タイトルへ戻る-&gt;Start]]
-</tw-passagedata></tw-storydata>
+</tw-passagedata><tw-passagedata pid="12" name="Q_01" tags="" position="500,400" size="100,100">Passage: Q_01
+
+森の小道を抜けると、そこは絵本の世界だった。
+石畳の道。木組みの家々。窓辺に咲く花。井戸の周りで話し込む人々。煙突から立ち上る煙が、午後の光の中でゆらめいている。
+
+私——アヤカ——は自分の腕を見下ろす。知らない服を着ている。粗い布で作られた、でも丁寧に縫われたワンピース。エプロンの紐が腰で結ばれている。
+
+スマホを握りしめたまま、ゆっくりと歩き出す。足元に敷かれた石は滑らかで、長年踏まれて磨かれたことが分かる。空気が違う。排気ガスの匂いがしない。代わりに、焼きたてのパンと、草の香り。
+
+「おはよう、リラ！」
+
+誰かが声をかけてくる。リラ。それが私——この体の名前らしい。
+
+振り向くと、同じくらいの年頃の女の子が笑顔で手を振っている。茶色い髪を三つ編みにして、クリーム色のエプロンドレスを着た子。頬にそばかすがあって、目が大きい。
+
+「おはよう」
+
+自然に言葉が出る。この体の記憶が、うっすらと浮かんでくる。彼女の名前はミア。幼馴染。いつも一緒にいる。朝は必ず井戸で会って、一緒に水を汲む。
+
+夢だ。きっと夢。
+でも、すごくリアル。風が頬を撫でる感触。遠くで鳥が鳴く声。足元の石の冷たさ。
+
+「それ、何？」
+ミアが私の手元を見て目を輝かせる。
+
+「え、これ？　スマホ」
+
+「すまほ？」
+
+「うん、写真が撮れるんだよ」
+
+説明しながら、カメラを起動する。画面が明るく光る。電波は圏外。でも写真は撮れる。ミアに向けてシャッターを切ると、画面に彼女の驚いた顔が映る。
+
+「わあ！」
+ミアが画面を覗き込む。「私だ！　これ、どうなってるの？」
+
+他の村人たちも集まってくる。みんな興味津々で、でも怖がる様子はない。純粋な好奇心。年配の女性が「まあ、不思議ね」と笑い、子供たちが「見せて見せて！」と目を輝かせる。
+
+「すごいね、それ！　どこで拾ったの？」
+
+「拾った……わけじゃないんだけど」
+
+どう説明すればいいか分からない。気づいたら、森の中を歩いていて、手にこれを持っていた。
+
+村はどこを見ても可愛い。パステルカラーのドア。窓枠に這う蔦。石畳に落ちる木漏れ日。花壇に咲く色とりどりの花。洗濯物が風に揺れている。
+
+私は夢中でシャッターを切る。インスタに上げられないのは残念だけど、とりあえず記録。こんな素敵な場所、後で絶対見返したい。
+
+ミアが案内してくれる。「パン屋さん、朝焼きたてだよ」
+
+小さなパン屋の前を通ると、本当にいい匂い。店主のおじさんが笑顔で手を振る。「リラ、元気かい？」
+
+「元気です」
+
+記憶にない人なのに、自然に挨拶できる。不思議。
+
+広場に出ると、市場が開かれている。野菜、果物、手作りの雑貨。お金を使ってる様子はなくて、物々交換みたい。「トマト三つと、このパン二つ、交換しない？」「いいわよ」
+
+私はそれを全部、写真に収める。
+
+「リラ、それ楽しい？」
+ミアが笑う。
+
+「うん、めっちゃ楽しい」
+
+「変なの。でも、あなたが楽しそうで嬉しい」
+
+午後。ミアと一緒に畑仕事を手伝う。この体は慣れているらしく、手が勝手に動く。土の感触。太陽の暖かさ。汗をかく。
+
+東京では、こんなことしたことない。
+でも、悪くない。
+
+[[次へ-&gt;Q_02]]</tw-passagedata><tw-passagedata pid="13" name="M_01" tags="" position="500,525" size="100,100">Passage: W_01
+
+椅子が軋む音がした。
+
+いや、違う。軋んだのは自分の腰だ。座ったときに、関節が鳴った。そんなはずはない。私の体は——
+
+「今まで、寂しい思いをさせてすまなかったね」
+
+隣から声が聞こえる。低く、落ち着いた男性の声。顔を向けると、グレーのポロシャツを着た初老の男性が座っている。小綺麗な格好。整った白髪。少し日焼けした肌。
+
+知らない人だ。
+なのに、その人は私の手を握っている。
+
+手、と思って見下ろすと、そこにあるのは私の手ではなかった。シワの入った、血管の浮いた、年老いた女性の手。爪は短く整えられていて、薬指に細い金の指輪が光っている。
+
+息が詰まる。心臓が——いや、この体の心臓が、不規則に打つ。
+
+「エリザベス？」
+
+男性が心配そうに覗き込んでくる。エリザベス。それが私の名前らしい。違う。私の名前は——何だったか思い出せない。
+
+「大丈夫。ちょっと、ぼんやりしてただけ」
+
+自分の口が勝手に動く。声は私のものではない。少しかすれた、年を重ねた女性の声。
+
+男性はほっとしたように微笑む。「最近疲れてるんじゃないか。無理しなくていいんだよ」
+
+無理。無理とは何の話だろう。
+
+目の前に海が広がっている。夕暮れ時。波が規則的に打ち寄せては引いていく。オレンジ色の光が水面を染めている。ビーチハウスのデッキ。二脚の木製チェア。テーブルの上には、半分飲みかけのワイングラス。
+
+美しい光景だ。でも、どうしてここにいるのか分からない。
+
+男性が立ち上がる。「少し歩こうか」
+
+私の体が自然に応じる。椅子から立ち上がり——膝が痛い。こんなに痛むはずがない。でも痛む。この体の膝は、確かに痛みを感じている。
+
+男性が私の腰に手を添える。支えてくれている。二人でゆっくりとデッキを降り、砂浜へ。裸足。砂の感触が足裏に伝わる。冷たくて、柔らかい。
+
+「子供たちが出ていってから、こんなにゆっくり二人で過ごすのは久しぶりだな」
+
+子供たち。
+その言葉が、何かを引き金にする。
+
+記憶ではない何かが、霧の中から浮かび上がってくる。感覚。残像。
+
+長いダイニングテーブル。誰も座っていない椅子。冷めたスープ。時計の音。玄関のドアが閉まる音。それから、静寂。
+
+私は——いや、エリザベスは、毎日その食卓に料理を並べた。完璧に。栄養バランスを考えて。彩りよく。誰も褒めてくれなくても。誰も食べてくれなくても。
+
+夫は遅く帰ってきた。疲れた顔で。「今日はいいよ、先に食べといて」と言って、書斎に消えた。
+
+娘は部屋に閉じこもった。「お母さんの作る料理、ヘルシーすぎて味がしない」と言った。
+
+息子は反抗期で、何を言っても返事をしなかった。
+
+それでも、エリザベスは完璧な妻であろうとした。完璧な母であろうとした。
+
+家は常に清潔に保たれ、庭の花は手入れされ、洗濯物は畳まれ、冷蔵庫は整理され——
+
+「エリザベス」
+
+男性が私の肩を抱く。
+
+突然、体が震える。
+
+泣いている。この体が、泣いている。
+涙が止まらない。なぜ泣いているのか分からない。でも止まらない。
+
+男性は何も言わずに、ただ抱きしめてくれる。
+
+波の音だけが聞こえる。
+
+「俺も、ずっと間違ってた」
+
+男性——夫が、静かに言う。
+
+[[次へ-&gt;W_02]]</tw-passagedata><tw-passagedata pid="14" name="Q_02" tags="" position="625,400" size="100,100">Passage: Q_02
+
+夕方、井戸で顔を洗っていると、誰かの気配。
+
+振り向くと、年配の女性が立っている。グレーの髪を後ろで束ね、シンプルな濃紺の服を着た人。でも、雰囲気が他の村人と違う。鋭い目。
+
+村人たちがさっと道を開ける。
+
+「長老」
+ミアが小さく囁く。
+
+長老はゆっくりと近づいてくる。私の手元——スマホを見つめる。
+
+「それを、持ってきなさい」
+
+命令ではなく、でも拒否できない響き。
+
+村の端にある、少し大きな家。石造りで、窓が多い。中に入ると、他の家とは全く違う空間が広がる。
+
+本棚。たくさんの本。机の上には、複雑な機械のようなもの。そして、壁際に置かれた——画面。
+
+モニター。
+薄型で、フレームレス。明らかに現代的な。
+
+「座りなさい」
+
+促されて木の椅子に座る。長老は私の向かいに座り、スマホを指差す。
+
+「それを、見せなさい」
+
+手渡すと、長老は慎重に手に取る。画面を見つめ、側面を確認し、背面のカメラを調べる。
+
+「量子ドットディスプレイ……」
+
+小さく呟く。
+
+「2020年代後半の試作機。まだ市販化される前のモデル」
+
+私は息を呑む。
+
+「あなた、何者？」
+
+「どういう……」
+
+「正直に答えなさい。あなたは、いつから来た」
+
+沈黙。
+嘘をついても無駄だと、直感的に分かる。
+
+「2025年……だと思います」
+
+「思う？」
+
+「気づいたら、ここにいたんです。森の中で。このスマホを持ったまま」
+
+長老は立ち上がり、モニターを操作する。画面に複雑な図が表示される。グラフ。数値。波形。
+
+「昨夜、強い磁気嵐があった」
+長老が画面を指差す。
+「太陽フレアによる。地磁気が大きく乱れた。その影響で——」
+
+画面が切り替わる。時空の歪みを示す図。
+
+「稀に、時間の裂け目が生じる。あなたは、その裂け目を通ってここに来た」
+
+「じゃあ、戻れるんですか？」
+
+「理論上は」
+
+長老がこちらを向く。
+
+「この量子ドットディスプレイ。製造された時の量子状態が、今でも過去ともつれている」
+
+「もつれ？」
+
+「量子もつれ。二つの量子が、どれだけ離れていても相関を持つ現象。この場合、時間を超えても」
+
+長老がスマホを持ち上げる。
+
+「このディスプレイの量子ドットは、2020年代に生成された。その瞬間の量子状態が、未来——つまり、今——でも過去と繋がっている。通常は観測できない。でも、磁気嵐のエネルギーがあれば」
+
+「帰れる……？」
+
+「今夜、再び磁気嵐が来る」
+
+長老がモニターの予報画面を見せる。グラフが急上昇している。
+
+「オーロラが見えるだろう。その時、量子もつれを利用して、あなたは元の時代に戻れる」
+
+希望が湧く。戻れる。元の世界に。
+
+「でも、その前に理解しなければならないことがある」
+
+[[次へ-&gt;Q_03]]</tw-passagedata><tw-passagedata pid="15" name="Q_03" tags="" position="775,400" size="100,100">Passage: Q_03
+
+長老が椅子に座り直す。
+
+「あなたが来た時代——2020年代——の後、世界は変わった」
+
+画面に年表が表示される。
+
+2026年：未成年SNS禁止法
+2030年：比較誘発コンテンツ規制法
+2035年：コミュニティ再編成法
+2040年：完全比較禁止社会移行
+
+「なぜ、そんなことを」
+
+「比較が、人間を不幸にしたから」
+長老の声が重い。
+「他人と自分を比べることで、人々は際限なく苦しんだ。もっと美しく。もっと裕福に。もっと成功を。SNSが、その比較を加速させた。若者たちは、見えない基準に追い詰められ、破綻した」
+
+画面に統計が表示される。自殺率。うつ病の増加。
+
+「社会は決断した。比較を、禁じる」
+
+「でも……友達と写真を共有するのって、楽しいじゃないですか。素敵な場所を見つけたら、教え合いたい。それを禁止したら、つまらなくないですか」
+
+長老が小さく笑う。
+
+「あなたは、この村をどう思った？」
+
+「童話みたいで、素朴で……すごく可愛いです。みんな優しいし、穏やかで」
+
+言いながら、本当にそう思っていることに気づく。
+
+「元の世界に戻りたいけど、ここには……違う魅力があります」
+
+長老が頷く。
+
+「あなたは悪い子じゃない。ただ、知らないだけ」
+
+長老が立ち上がり、棚から透明な箱を取り出す。未来的な素材。触れると微かに光が走る。
+
+「これに、あなたのスマートフォンを入れなさい」
+
+言われるまま、スマホを箱に入れる。長老が蓋を閉めると、箱全体が淡い青色に発光する。
+
+「量子シールド。中の量子状態を保護する。これを持っていれば、磁気嵐の時、量子もつれが活性化する」
+
+箱を私に手渡す。温かい。
+
+「オーロラが見えたら、この箱を開けなさい。そうすれば、元の時代に戻れる」
+
+「ありがとうございます」
+
+「でも」
+長老の声が冷たくなる。
+「それを開けるまで、絶対にこの箱を開けてはいけない。もし途中で開ければ、量子もつれは崩壊する。二度と戻れなくなる」
+
+背筋が凍る。
+
+「そして」
+長老が私を見つめる。
+「もしあなたが比較を誘発する行為——写真の共有や、SNS的な振る舞い——をこの村で行えば、私はこの箱を没収し、あなたをこの時代に留める義務がある。村を守るために」
+
+「分かりました」
+
+箱を受け取る。ずっしりと重い。
+
+長老の家を出る。
+夕陽が、村全体をオレンジ色に染めている。
+
+ミアが待っていた。
+
+「大丈夫だった？」
+
+「うん。長老が、これ預かってくれることになった」
+箱を見せる。
+
+「不思議な箱だね。光ってる」
+
+「うん。大事なものだから、気をつけないと」
+
+ミアが私の腕を取る。
+
+「ねえ、展望台に行こう！　夕焼け、きれいだよ」
+
+村の外れ。丘の上への小道。登る途中、足元に小さな花が咲いている。名前は知らないけど、可愛い。
+
+写真を撮りたい。
+でも、箱の中。
+我慢する。
+
+展望台に着く。
+息を呑む。
+
+オレンジと紫が混ざった空。地平線まで続く森。遠くに見える湖が金色に光っている。雲が、まるで絵の具を流したように色づいている。
+
+美しい。
+
+本来なら、絶対に写真を撮る場面だ。インスタのストーリーに上げて、「エモすぎ」とか書いて。フィルターかけて、位置情報つけて。
+
+でも、箱はポケットに入れたまま。
+開けたら、戻れない。
+
+展望台の木製の手すりに手をつく。ミアが隣に立つ。
+
+「きれいだね」
+
+「……うん」
+
+風が吹く。髪が揺れる。ミアの三つ編みも、風に揺れている。
+
+「心配したんだよ、長老のところに連れていかれて」
+
+「ごめんね」
+
+「ううん。無事でよかった。リラがいなくなったら、寂しいもん」
+
+ミアが笑う。
+
+空がゆっくりと暗くなる。
+紫が、濃い青に変わる。
+最初の星が見える。
+そして、次々と。
+
+「わあ」
+
+思わず声が出る。
+星。こんなに見えるんだ。
+東京では、せいぜい数個。でもここには、無数の星。天の川まで、はっきりと見える。
+
+スマホのことを、一瞬忘れる。
+ただ、見つめる。
+
+「ねえ、リラ」
+
+「うん？」
+
+「あのね」
+ミアが少し恥ずかしそうに笑う。
+「私、リラと友達でよかったって、いつも思ってる」
+
+胸が温かくなる。
+
+「私も」
+
+嘘じゃない。本当にそう思う。
+
+「リラは、時々ぼんやりしてるよね。どこか遠くを見てるみたいに」
+
+「……そうかな」
+
+「うん。でも、それも好き。リラは、リラだから」
+
+涙が出そうになる。なんで泣きたくなるんだろう。
+
+そのとき。
+北の空が、光り始めた。
+
+「オーロラ……！」
+ミアが息を呑む。
+
+緑色の光のカーテンが、空を横切る。揺らめき、波打ち、色を変える。緑から青へ。青から紫へ。
+
+美しい。
+
+そして——
+ポケットの箱が、急激に温かくなる。
+振動している。
+
+これが、長老の言っていた——
+
+[[次へ-&gt;Q_04]]</tw-passagedata><tw-passagedata pid="16" name="Q_04" tags="" position="925,400" size="100,100">Passage: Q_04
+
+「リラ、どうしたの？」
+ミアが心配そうに見る。
+
+「……なんでもない」
+
+箱を取り出す。青く光っている。脈動するように、明滅している。
+
+「その箱、すごく光ってる」
+
+「うん」
+
+今、開けなければ。
+オーロラが消えたら、もう戻れない。
+
+でも。
+
+もう少し、ここにいたい。
+もう少し、ミアと一緒にいたい。
+このオーロラを、一緒に見ていたい。
+
+ミアが手すりに手を置いている。
+その手に、自分の手を重ねる。
+
+ミアが驚いて、でも嬉しそうに笑う。
+
+「手、冷たいね」
+
+「そうかな」
+
+オーロラが、激しく揺らめく。
+箱の振動が、強くなる。
+
+今だ。
+今、開けなければ。
+
+でも、手が動かない。
+
+「ミア」
+
+「うん？」
+
+「私ね——」
+
+何を言おうとしているのか、自分でも分からない。
+ただ、何か伝えたい。
+
+「ありがとう」
+
+「え、何が？」
+
+「今日、いろいろ案内してくれて。楽しかった」
+
+「変なの。また明日も一緒だよ」
+
+明日。
+ない。
+もう、会えない。
+
+オーロラが、最高潮に達する。空全体が光に包まれる。
+箱が、熱くなる。
+
+開けなきゃ。
+今。
+
+手が震える。
+蓋に手をかける。
+
+ミアを見る。
+ミアが笑っている。
+オーロラの光に照らされた、その顔。
+
+美しい。
+
+写真に残せない。
+でも、忘れない。
+
+蓋を、開ける。
+
+スマホが、強く発光する。
+世界が、歪む。
+
+「リラ？」
+
+ミアの声が遠くなる。
+体が透けていく。
+
+「ミア——」
+
+手を伸ばす。
+でも、届かない。
+
+「また——」
+
+言葉が途切れる。
+
+オーロラが。
+星空が。
+ミアが。
+消えていく。
+
+目が覚める。
+
+自分の部屋。
+ベッド。
+スマホを握りしめている。
+
+画面を見る。
+
+23:47
+2025年11月12日
+
+戻ってきた。
+
+でも、涙が止まらない。
+なんで泣いてるんだろう。
+
+夢。
+ただの夢。
+
+でも——
+
+ギャラリーを開く。
+あるはずがない。
+でも——
+
+写真がある。
+
+石畳の道。木組みの家。ミアの笑顔。市場。畑。夕暮れの展望台。
+星空。
+オーロラ。
+
+最後の一枚。
+ミアが、手すりに手を置いて、こちらを見ている。
+笑顔。
+
+いつ撮った？
+覚えてない。
+
+でも、ある。
+
+胸が苦しい。
+
+スマホを抱きしめる。
+窓の外。東京の夜景。無数の光。
+でも、星は見えない。
+
+翌朝。
+
+学校。
+いつもの教室。いつもの友達。
+
+「アヤカ、昨日のカフェ行った？」
+
+「ううん」
+
+「まじ？　めっちゃ映えるよ。ほら」
+
+スマホの画面を見せられる。ピンクの壁。可愛いドリンク。
+
+「いいね」
+
+そう言いながら、何も感じない。
+
+休み時間。
+一人で屋上に行く。
+
+空を見上げる。
+青空。
+星は見えない。オーロラも。
+
+ポケットの中のスマホ。
+ギャラリーを開く。
+
+あの写真。
+ミアの笑顔。
+
+会いたい。
+でも、会えない。
+
+「比較が人を不幸にする」
+
+長老の言葉を思い出す。
+
+私は、何と比較してる？
+
+今の生活と、あの村？
+違う。
+
+今の自分と、あの時の自分。
+
+スマホを通さずに見た、あの景色。
+ミアと手を重ねた、あの瞬間。
+
+それを知ってしまった。
+
+もう、戻れない。
+知る前の自分には。
+
+鐘が鳴る。
+教室に戻る。
+授業を受ける。
+友達と笑う。
+
+放課後、カフェに行く。
+写真を撮る。
+でも、投稿はしない。
+
+「アヤカ、上げないの？」
+
+「うん。なんか、今日はいいかなって」
+
+友達が不思議そうな顔をする。
+
+「らしくないね」
+
+そうかもしれない。
+
+でも、今は。
+
+この景色を、自分の目で見ていたい。
+画面越しじゃなく。
+
+夜。
+
+部屋で、あの写真を見る。
+
+オーロラ。
+涙が出る。
+
+美しかった。
+ミアと一緒に見た、あの光。
+
+もう一度、見たい。
+
+でも、長老は言った。
+
+「稀に起きる」
+
+つまり、また起きるかもしれない。
+いつか。
+もしかしたら。
+
+希望。
+それとも、呪い？
+
+窓の外。
+東京の夜。
+
+星は、見えない。
+
+でも、いつか。
+オーロラが見えたら。
+
+その時、また——
+
+そう思いながら。
+
+スマホを、そっと胸に抱く。
+
+量子もつれ。
+過去と未来を繋ぐ、見えない糸。
+
+まだ、切れていない。
+そう信じたい。
+
+星の見えない空を、見上げながら。
+
+[[Startへ戻る-&gt;Start]]</tw-passagedata><tw-passagedata pid="17" name="W_02" tags="" position="625,525" size="100,100">Passage: W_02
+
+「エリートサラリーマンでいなきゃいけないと思ってた。家族を養うために、出世しなきゃいけないと思ってた。休んでる暇なんてないと思ってた」
+
+彼の声が震える。
+
+「でも、本当は怖かっただけなんだ。家に帰るのが。お前や子供たちと向き合うのが。うまくやれる自信がなかった。だから、仕事に逃げた」
+
+記憶がまた浮かぶ。
+夫の背中。いつも背中だけを見ていた。
+
+夫は毎朝早く出て、夜遅く帰ってきた。週末も接待ゴルフ。家にいても、新聞を読むか、テレビを見るか。
+
+エリザベスは、それでいいと思っていた。夫は頑張っている。自分も頑張らなければ。
+
+二人とも、頑張ることしか知らなかった。
+
+「子供たちが出ていって、最初はほっとしたんだ」
+夫が続ける。
+
+「やっと責任から解放されたって。でも、お前が毎日あの大きなダイニングテーブルで一人で食事してるのを見たとき——」
+
+彼の腕に力が入る。
+
+「何やってたんだろうって思った。俺たちは何のために、あんなに必死だったんだろうって」
+
+分からない。
+でも、この体は知っている。
+
+エリザベスの記憶が、ゆっくりと流れ込んでくる。
+
+空っぽのダイニング。誰もいないリビング。綺麗に整頓された子供部屋。もう誰も使わない部屋。
+
+それでも、エリザベスは毎日掃除をした。料理を作った。完璧に。
+
+ある日、夫が早く帰ってきた。
+
+「今日、部長に昇進の話を断った」
+
+エリザベスは驚いて、夫を見た。
+
+「もういいんだ。もう、頑張らなくていい」
+夫は疲れ切った顔で笑った。
+
+「このビーチハウス、覚えてるか？　結婚する前、二人でドライブに来た場所」
+
+覚えている——エリザベスは覚えている。
+
+若い二人。何も持っていなかった。でも、砂浜を歩いて、波の音を聞いて、ただそれだけで幸せだった。
+
+「ここを買ったんだ。退職金の前借りで」
+夫は言った。
+
+「もう一度、あの頃に戻ろう。何も考えずに、ただ二人でいられた頃に」
+
+波が打ち寄せる。
+引いていく。
+また打ち寄せる。
+
+私——いや、もう私とエリザベスの境界が曖昧になっている——は夫の胸に顔を埋める。
+
+「ごめんね」
+エリザベスが呟く。
+
+「私も、完璧な妻でいなきゃいけないと思ってた。あなたが帰ってきたとき、疲れた顔を見せたくなかった。弱音を吐きたくなかった」
+
+「馬鹿だな、俺たち」
+夫が笑う。泣きながら笑っている。
+
+「二人とも、頑張りすぎてた」
+
+夕陽が沈んでいく。
+空が紫色に染まる。
+最初の星が見える。
+
+二人はしばらく、波打ち際に立っている。
+
+やがて、夫が言う。
+
+「お腹空いたな」
+
+「私も」
+
+「何か作ろうか」
+
+エリザベスが答えようとして、夫が付け加える。
+
+「二人で」
+
+その言葉が、何かを溶かす。
+胸の奥で固まっていた何かが、ゆっくりと溶けていく。
+
+「うん」
+
+[[次へ-&gt;W_03]]</tw-passagedata><tw-passagedata pid="18" name="W_03" tags="" position="775,525" size="100,100">Passage: W_03
+
+二人でビーチハウスに戻る。
+
+キッチンは小さい。あの立派なキッチンに比べたら、ずっと小さい。
+でも、二人で立つには十分だ。
+
+夫が冷蔵庫を開ける。「トマトとモッツァレラがあるな」
+
+エリザベスがバジルを手に取る。「カプレーゼにしましょう」
+
+「パスタも茹でるか」
+
+「シンプルなペペロンチーノがいいわ」
+
+料理をしながら、二人は笑う。
+
+夫がトマトを切る手つきはぎこちない。エリザベスがそれを見て笑う。
+
+「もっと薄く切らないと」
+
+「こんなもんだろ」
+
+「ダメよ、厚すぎる」
+
+「じゃあ、お前がやれよ」
+
+「二人でやるって言ったのはあなたでしょ」
+
+軽口を叩き合いながら、料理が出来上がる。
+
+完璧ではない。トマトは厚すぎるし、パスタは少し茹ですぎた。
+でも、二人で作った。
+
+小さなテーブルに向かい合って座る。
+
+ワイングラスを合わせる。
+
+「乾杯」
+
+「何に？」
+夫が考える。
+
+「これからの時間に」
+エリザベスが微笑む。
+
+「これからの時間に」
+
+最初の一口を食べて、二人が同時に笑う。
+
+「美味しくないな」
+
+「全然」
+
+「でも」
+
+「でも？」
+エリザベスが夫の目を見る。
+
+「幸せね」
+
+夫が手を伸ばす。
+エリザベスの手を握る。
+
+「ああ。幸せだ」
+
+窓の外で、波が打ち寄せる音が聞こえる。
+規則的に。
+永遠に続くように。
+
+私は——もう完全にエリザベスになっている——夫の手を握り返す。
+
+温かい。
+生きている。
+隣にいる。
+
+それだけで、十分だった。
+
+[[次へ-&gt;W_04]]</tw-passagedata><tw-passagedata pid="19" name="W_04" tags="" position="925,525" size="100,100">Passage: W_04
+
+翌朝、目が覚める。
+
+夫はまだ眠っている。穏やかな寝顔。
+エリザベスは——私は——そっとベッドを抜け出す。
+
+デッキに出ると、朝の海が広がっている。
+昨日とは違う光。
+でも、同じ波。
+同じ音。
+
+コーヒーを淹れる。二つのカップ。
+
+やがて、背後で気配がする。
+
+「おはよう」
+
+夫がデッキに出てくる。寝癖のついた髪。皺だらけのTシャツ。
+
+完璧ではない。
+でも、愛おしい。
+
+「おはよう」
+私はコーヒーを手渡す。
+
+二人で並んで座る。
+
+何も言わない。
+ただ、波の音を聞く。
+
+これから、毎日こうして過ごすのだろう。
+
+完璧な妻ではない私。
+エリートサラリーマンではない夫。
+ただの二人。
+
+それが、本当の始まりだった。
+
+波が打ち寄せる。
+引いていく。
+また打ち寄せる。
+
+私たちは、ここにいる。
+隣に、並んで。
+
+それだけが、全てだった。
+
+[[Startへ戻る-&gt;Start]]</tw-passagedata></tw-storydata>
 <script title="Twine engine code" data-main="harlowe">(function(){"use strict";
 var require,define;!function(){var e={},r={};require=function(i){var n=e[i];return n&&(r[i]=n[1].apply(void 0,n[0].map(require)),e[i]=void 0),r[i]},(define=function(r,i,n){if("function"==typeof r)return r();e[r]=[i,n]}).amd=!0}();/*!
  * https://github.com/paulmillr/es6-shim
