--- a/timestamp.html
+++ b/timestamp.html
@@ -48,7 +48,7 @@
     function buildText() {
       const ts = formatNowJST();
       // 指定フォーマット固定（最後に改行2つ入れて、続きが書きやすいように）
-      return `TS: ${ts} / ここから発言：\r\n\r\n`;
+      return `TS: ${ts} / ここから発言：\r\n\r\n\r\n`;
     }
 
     async function copyText(text) {
@@ -93,3 +93,4 @@
 </body>
 
 </html>
+
