--- a/timestamp.html
+++ b/timestamp.html
@@ -48,7 +48,7 @@
     function buildText() {
       const ts = formatNowJST();
       // 指定フォーマット固定（最後に改行2つ入れて、続きが書きやすいように）
-      return `TS: ${ts} / ここから発言：\u2028\u2028`;
+      return `TS: ${ts} / ここから発言： >>> `;
     }
 
     async function copyText(text) {
@@ -93,6 +93,7 @@
 </body>
 
 </html>
+
 
 
 
